# sphere-vis

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp
config/: default.toml
include/: Config.h  RingBuffer.h  Shader.h  Sphere.h  fft.h
scripts/: install-dependencies-fedora.sh
shaders/: fragment.glsl
